# pythonSelFramework

./: .gitignore  azure-pipelines-1.yml  azure-pipelines.yml  pyproject.toml
pageObjects/: CheckoutPage.py  HomePage.py
testData/: HomePageData.py
tests/: conftest.py  test_e2e.py  test_homepage.py
tests/reports/: 31-08-2022 21-17-38.html
utilities/: BaseClass.py  Logger.py
