[tool.poetry]
name = "PythonSelFramework"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.4.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-html = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
